--- a/mitiv/deconv/impl/WeightedConvolutionDouble2D.html
+++ b/mitiv/deconv/impl/WeightedConvolutionDouble2D.html
@@ -60,13 +60,13 @@
 <ul class="subNavList">
 <li>SUMMARY:&nbsp;</li>
 <li>NESTED&nbsp;|&nbsp;</li>
-<li><a href="#field_summary">FIELD</a>&nbsp;|&nbsp;</li>
+<li><a href="#fields_inherited_from_class_mitiv.deconv.impl.WeightedConvolutionDouble">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_summary">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_summary">METHOD</a></li>
 </ul>
 <ul class="subNavList">
 <li>DETAIL:&nbsp;</li>
-<li><a href="#field_detail">FIELD</a>&nbsp;|&nbsp;</li>
+<li>FIELD&nbsp;|&nbsp;</li>
 <li><a href="#constructor_detail">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_detail">METHOD</a></li>
 </ul>
@@ -134,19 +134,6 @@ extends <a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble.html" titl
 <!--   -->
 </a>
 <h3>Field Summary</h3>
-<table class="overviewSummary" border="0" cellpadding="3" cellspacing="0" summary="Field Summary table, listing fields, and an explanation">
-<caption><span>Fields</span><span class="tabEnd">&nbsp;</span></caption>
-<tr>
-<th class="colFirst" scope="col">Modifier and Type</th>
-<th class="colLast" scope="col">Field and Description</th>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><code>protected <a href="../../../mitiv/deconv/impl/ConvolutionDouble2D.html" title="class in mitiv.deconv.impl">ConvolutionDouble2D</a></code></td>
-<td class="colLast"><code><strong><a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble2D.html#cnvl">cnvl</a></strong></code>
-<div class="block">Convolution operator.</div>
-</td>
-</tr>
-</table>
 <ul class="blockList">
 <li class="blockList"><a name="fields_inherited_from_class_mitiv.deconv.impl.WeightedConvolutionDouble">
 <!--   -->
@@ -251,24 +238,6 @@ extends <a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble.html" titl
 <div class="details">
 <ul class="blockList">
 <li class="blockList">
-<!-- ============ FIELD DETAIL =========== -->
-<ul class="blockList">
-<li class="blockList"><a name="field_detail">
-<!--   -->
-</a>
-<h3>Field Detail</h3>
-<a name="cnvl">
-<!--   -->
-</a>
-<ul class="blockListLast">
-<li class="blockList">
-<h4>cnvl</h4>
-<pre>protected&nbsp;<a href="../../../mitiv/deconv/impl/ConvolutionDouble2D.html" title="class in mitiv.deconv.impl">ConvolutionDouble2D</a> cnvl</pre>
-<div class="block">Convolution operator.</div>
-</li>
-</ul>
-</li>
-</ul>
 <!-- ========= CONSTRUCTOR DETAIL ======== -->
 <ul class="blockList">
 <li class="blockList"><a name="constructor_detail">
@@ -415,13 +384,13 @@ extends <a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble.html" titl
 <ul class="subNavList">
 <li>SUMMARY:&nbsp;</li>
 <li>NESTED&nbsp;|&nbsp;</li>
-<li><a href="#field_summary">FIELD</a>&nbsp;|&nbsp;</li>
+<li><a href="#fields_inherited_from_class_mitiv.deconv.impl.WeightedConvolutionDouble">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_summary">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_summary">METHOD</a></li>
 </ul>
 <ul class="subNavList">
 <li>DETAIL:&nbsp;</li>
-<li><a href="#field_detail">FIELD</a>&nbsp;|&nbsp;</li>
+<li>FIELD&nbsp;|&nbsp;</li>
 <li><a href="#constructor_detail">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_detail">METHOD</a></li>
 </ul>
