--- a/mitiv/deconv/impl/package-tree.html
+++ b/mitiv/deconv/impl/package-tree.html
@@ -72,6 +72,10 @@
 <ul>
 <li type="circle">java.lang.Object
 <ul>
+<li type="circle">mitiv.linalg.<a href="../../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg"><span class="strong">LinearOperator</span></a>
+<ul>
+<li type="circle">mitiv.linalg.shaped.<a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped"><span class="strong">ShapedLinearOperator</span></a> (implements mitiv.base.<a href="../../../mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a>)
+<ul>
 <li type="circle">mitiv.deconv.<a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv"><span class="strong">Convolution</span></a>
 <ul>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionDouble.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionDouble</span></a>
@@ -86,6 +90,10 @@
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionFloat1D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionFloat1D</span></a></li>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionFloat2D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionFloat2D</span></a></li>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionFloat3D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionFloat3D</span></a></li>
+</ul>
+</li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
