--- a/mitiv/deconv/package-summary.html
+++ b/mitiv/deconv/package-summary.html
@@ -75,7 +75,9 @@
 <tbody>
 <tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">This class implements a linear operator to apply the convolution.</div>
+</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/deconv/ConvolutionOperator.html" title="class in mitiv.deconv">ConvolutionOperator</a></td>
