--- a/mitiv/linalg/LinearOperator.html
+++ b/mitiv/linalg/LinearOperator.html
@@ -288,7 +288,7 @@ extends java.lang.Object</pre>
 <ul class="blockList">
 <li class="blockList">
 <h4>inputSpace</h4>
-<pre>protected&nbsp;<a href="../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a> inputSpace</pre>
+<pre>protected final&nbsp;<a href="../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a> inputSpace</pre>
 <div class="block">The input vector space.</div>
 </li>
 </ul>
@@ -298,7 +298,7 @@ extends java.lang.Object</pre>
 <ul class="blockList">
 <li class="blockList">
 <h4>outputSpace</h4>
-<pre>protected&nbsp;<a href="../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a> outputSpace</pre>
+<pre>protected final&nbsp;<a href="../../mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a> outputSpace</pre>
 <div class="block">The output vector space.</div>
 </li>
 </ul>
