--- a/mitiv/deconv/impl/ConvolutionDouble.html
+++ b/mitiv/deconv/impl/ConvolutionDouble.html
@@ -85,6 +85,12 @@
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
+<li><a href="../../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">mitiv.linalg.LinearOperator</a></li>
+<li>
+<ul class="inheritance">
+<li><a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped">mitiv.linalg.shaped.ShapedLinearOperator</a></li>
+<li>
+<ul class="inheritance">
 <li><a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">mitiv.deconv.Convolution</a></li>
 <li>
 <ul class="inheritance">
@@ -94,9 +100,17 @@
 </ul>
 </li>
 </ul>
+</li>
+</ul>
+</li>
+</ul>
 <div class="description">
 <ul class="blockList">
 <li class="blockList">
+<dl>
+<dt>All Implemented Interfaces:</dt>
+<dd><a href="../../../mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a></dd>
+</dl>
 <dl>
 <dt>Direct Known Subclasses:</dt>
 <dd><a href="../../../mitiv/deconv/impl/ConvolutionDouble1D.html" title="class in mitiv.deconv.impl">ConvolutionDouble1D</a>, <a href="../../../mitiv/deconv/impl/ConvolutionDouble2D.html" title="class in mitiv.deconv.impl">ConvolutionDouble2D</a>, <a href="../../../mitiv/deconv/impl/ConvolutionDouble3D.html" title="class in mitiv.deconv.impl">ConvolutionDouble3D</a></dd>
@@ -125,7 +139,21 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <!--   -->
 </a>
 <h3>Fields inherited from class&nbsp;mitiv.deconv.<a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></h3>
-<code><a href="../../../mitiv/deconv/Convolution.html#number">number</a>, <a href="../../../mitiv/deconv/Convolution.html#shape">shape</a>, <a href="../../../mitiv/deconv/Convolution.html#space">space</a>, <a href="../../../mitiv/deconv/Convolution.html#timer">timer</a>, <a href="../../../mitiv/deconv/Convolution.html#timerForFFT">timerForFFT</a></code></li>
+<code><a href="../../../mitiv/deconv/Convolution.html#number">number</a>, <a href="../../../mitiv/deconv/Convolution.html#timer">timer</a>, <a href="../../../mitiv/deconv/Convolution.html#timerForFFT">timerForFFT</a></code></li>
+</ul>
+<ul class="blockList">
+<li class="blockList"><a name="fields_inherited_from_class_mitiv.linalg.LinearOperator">
+<!--   -->
+</a>
+<h3>Fields inherited from class&nbsp;mitiv.linalg.<a href="../../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></h3>
+<code><a href="../../../mitiv/linalg/LinearOperator.html#ADJOINT">ADJOINT</a>, <a href="../../../mitiv/linalg/LinearOperator.html#ADJOINT_INVERSE">ADJOINT_INVERSE</a>, <a href="../../../mitiv/linalg/LinearOperator.html#DIRECT">DIRECT</a>, <a href="../../../mitiv/linalg/LinearOperator.html#inputSpace">inputSpace</a>, <a href="../../../mitiv/linalg/LinearOperator.html#INVERSE">INVERSE</a>, <a href="../../../mitiv/linalg/LinearOperator.html#INVERSE_ADJOINT">INVERSE_ADJOINT</a>, <a href="../../../mitiv/linalg/LinearOperator.html#outputSpace">outputSpace</a></code></li>
+</ul>
+<ul class="blockList">
+<li class="blockList"><a name="fields_inherited_from_class_mitiv.base.Traits">
+<!--   -->
+</a>
+<h3>Fields inherited from interface&nbsp;mitiv.base.<a href="../../../mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a></h3>
+<code><a href="../../../mitiv/base/Traits.html#BIG_ENDIAN">BIG_ENDIAN</a>, <a href="../../../mitiv/base/Traits.html#BOOLEAN">BOOLEAN</a>, <a href="../../../mitiv/base/Traits.html#BYTE">BYTE</a>, <a href="../../../mitiv/base/Traits.html#CHAR">CHAR</a>, <a href="../../../mitiv/base/Traits.html#classes">classes</a>, <a href="../../../mitiv/base/Traits.html#DBL_EPSILON">DBL_EPSILON</a>, <a href="../../../mitiv/base/Traits.html#DOUBLE">DOUBLE</a>, <a href="../../../mitiv/base/Traits.html#FIRST_NUMERIC">FIRST_NUMERIC</a>, <a href="../../../mitiv/base/Traits.html#FLOAT">FLOAT</a>, <a href="../../../mitiv/base/Traits.html#FLT_EPSILON">FLT_EPSILON</a>, <a href="../../../mitiv/base/Traits.html#INT">INT</a>, <a href="../../../mitiv/base/Traits.html#isNumeric">isNumeric</a>, <a href="../../../mitiv/base/Traits.html#LAST_NUMERIC">LAST_NUMERIC</a>, <a href="../../../mitiv/base/Traits.html#LITTLE_ENDIAN">LITTLE_ENDIAN</a>, <a href="../../../mitiv/base/Traits.html#LONG">LONG</a>, <a href="../../../mitiv/base/Traits.html#names">names</a>, <a href="../../../mitiv/base/Traits.html#NATIVE_BYTE_ORDER">NATIVE_BYTE_ORDER</a>, <a href="../../../mitiv/base/Traits.html#OBJECT">OBJECT</a>, <a href="../../../mitiv/base/Traits.html#SHORT">SHORT</a>, <a href="../../../mitiv/base/Traits.html#sizes">sizes</a>, <a href="../../../mitiv/base/Traits.html#suffixes">suffixes</a>, <a href="../../../mitiv/base/Traits.html#UNKNOWN_BYTE_ORDER">UNKNOWN_BYTE_ORDER</a>, <a href="../../../mitiv/base/Traits.html#VOID">VOID</a></code></li>
 </ul>
 </li>
 </ul>
@@ -144,7 +172,15 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <tr class="altColor">
 <td class="colFirst"><code>protected </code></td>
 <td class="colLast"><code><strong><a href="../../../mitiv/deconv/impl/ConvolutionDouble.html#ConvolutionDouble(mitiv.linalg.shaped.ShapedVectorSpace)">ConvolutionDouble</a></strong>(<a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;space)</code>
-<div class="block">The following constructors make this class non instantiable, but still
+<div class="block">The following constructor make this class non instantiable, but still
+ let others inherit from this class.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><code>protected </code></td>
+<td class="colLast"><code><strong><a href="../../../mitiv/deconv/impl/ConvolutionDouble.html#ConvolutionDouble(mitiv.linalg.shaped.ShapedVectorSpace, mitiv.linalg.shaped.ShapedVectorSpace)">ConvolutionDouble</a></strong>(<a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;inp,
+                 <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;out)</code>
+<div class="block">The following constructor make this class non instantiable, but still
  let others inherit from this class.</div>
 </td>
 </tr>
@@ -176,7 +212,7 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 </td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><code>double[]</code></td>
+<td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../../mitiv/deconv/impl/ConvolutionDouble.html#convolve(boolean)">convolve</a></strong>(boolean&nbsp;conj)</code>
 <div class="block">Compute F^*.diag(mtf).F.x
  where x is internal workspace.</div>
@@ -201,7 +237,7 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 </td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><code>void</code></td>
+<td class="colFirst"><code>abstract void</code></td>
 <td class="colLast"><code><strong><a href="../../../mitiv/deconv/impl/ConvolutionDouble.html#pull(double[])">pull</a></strong>(double[]&nbsp;x)</code>
 <div class="block">Copy real part of workspace into output array.</div>
 </td>
@@ -209,7 +245,7 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../../mitiv/deconv/impl/ConvolutionDouble.html#pull(mitiv.linalg.shaped.ShapedVector)">pull</a></strong>(<a href="../../../mitiv/linalg/shaped/ShapedVector.html" title="class in mitiv.linalg.shaped">ShapedVector</a>&nbsp;out)</code>
-<div class="block">Extract real part of the internal workspace.</div>
+<div class="block">Retrieve the result of the convolution.</div>
 </td>
 </tr>
 <tr class="altColor">
@@ -243,7 +279,21 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <!--   -->
 </a>
 <h3>Methods inherited from class&nbsp;mitiv.deconv.<a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></h3>
-<code><a href="../../../mitiv/deconv/Convolution.html#adjustPSF(mitiv.array.ShapedArray, int[])">adjustPSF</a>, <a href="../../../mitiv/deconv/Convolution.html#build(mitiv.linalg.shaped.ShapedVectorSpace)">build</a>, <a href="../../../mitiv/deconv/Convolution.html#center(mitiv.base.Shape)">center</a>, <a href="../../../mitiv/deconv/Convolution.html#dimension(int)">dimension</a>, <a href="../../../mitiv/deconv/Convolution.html#getElapsedTime()">getElapsedTime</a>, <a href="../../../mitiv/deconv/Convolution.html#getElapsedTimeInFFT()">getElapsedTimeInFFT</a>, <a href="../../../mitiv/deconv/Convolution.html#getNumber()">getNumber</a>, <a href="../../../mitiv/deconv/Convolution.html#getRank()">getRank</a>, <a href="../../../mitiv/deconv/Convolution.html#getSpace()">getSpace</a>, <a href="../../../mitiv/deconv/Convolution.html#getType()">getType</a>, <a href="../../../mitiv/deconv/Convolution.html#resetTimers()">resetTimers</a>, <a href="../../../mitiv/deconv/Convolution.html#setPSF(mitiv.array.ShapedArray)">setPSF</a></code></li>
+<code><a href="../../../mitiv/deconv/Convolution.html#adjustPSF(mitiv.array.ShapedArray, int[])">adjustPSF</a>, <a href="../../../mitiv/deconv/Convolution.html#build(mitiv.linalg.shaped.ShapedVectorSpace)">build</a>, <a href="../../../mitiv/deconv/Convolution.html#build(mitiv.linalg.shaped.ShapedVectorSpace, mitiv.linalg.shaped.ShapedVectorSpace)">build</a>, <a href="../../../mitiv/deconv/Convolution.html#build(mitiv.linalg.shaped.ShapedVectorSpace, mitiv.linalg.shaped.ShapedVectorSpace, int[])">build</a>, <a href="../../../mitiv/deconv/Convolution.html#center(mitiv.base.Shape)">center</a>, <a href="../../../mitiv/deconv/Convolution.html#getElapsedTime()">getElapsedTime</a>, <a href="../../../mitiv/deconv/Convolution.html#getElapsedTimeInFFT()">getElapsedTimeInFFT</a>, <a href="../../../mitiv/deconv/Convolution.html#getNumber()">getNumber</a>, <a href="../../../mitiv/deconv/Convolution.html#getRank()">getRank</a>, <a href="../../../mitiv/deconv/Convolution.html#getType()">getType</a>, <a href="../../../mitiv/deconv/Convolution.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply</a>, <a href="../../../mitiv/deconv/Convolution.html#resetTimers()">resetTimers</a>, <a href="../../../mitiv/deconv/Convolution.html#setPSF(mitiv.array.ShapedArray)">setPSF</a></code></li>
+</ul>
+<ul class="blockList">
+<li class="blockList"><a name="methods_inherited_from_class_mitiv.linalg.shaped.ShapedLinearOperator">
+<!--   -->
+</a>
+<h3>Methods inherited from class&nbsp;mitiv.linalg.shaped.<a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped">ShapedLinearOperator</a></h3>
+<code><a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html#getInputSpace()">getInputSpace</a>, <a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html#getOutputSpace()">getOutputSpace</a></code></li>
+</ul>
+<ul class="blockList">
+<li class="blockList"><a name="methods_inherited_from_class_mitiv.linalg.LinearOperator">
+<!--   -->
+</a>
+<h3>Methods inherited from class&nbsp;mitiv.linalg.<a href="../../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></h3>
+<code><a href="../../../mitiv/linalg/LinearOperator.html#apply(mitiv.linalg.Vector, mitiv.linalg.Vector)">apply</a>, <a href="../../../mitiv/linalg/LinearOperator.html#apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">apply</a>, <a href="../../../mitiv/linalg/LinearOperator.html#checkAdjoint(mitiv.linalg.Vector, mitiv.linalg.Vector)">checkAdjoint</a>, <a href="../../../mitiv/linalg/LinearOperator.html#checkLinearProblem(mitiv.linalg.LinearOperator, mitiv.linalg.Vector, mitiv.linalg.Vector, boolean)">checkLinearProblem</a>, <a href="../../../mitiv/linalg/LinearOperator.html#isEndomorphism()">isEndomorphism</a></code></li>
 </ul>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_java.lang.Object">
@@ -269,11 +319,23 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <a name="ConvolutionDouble(mitiv.linalg.shaped.ShapedVectorSpace)">
 <!--   -->
 </a>
-<ul class="blockListLast">
+<ul class="blockList">
 <li class="blockList">
 <h4>ConvolutionDouble</h4>
 <pre>protected&nbsp;ConvolutionDouble(<a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;space)</pre>
-<div class="block">The following constructors make this class non instantiable, but still
+<div class="block">The following constructor make this class non instantiable, but still
+ let others inherit from this class.</div>
+</li>
+</ul>
+<a name="ConvolutionDouble(mitiv.linalg.shaped.ShapedVectorSpace, mitiv.linalg.shaped.ShapedVectorSpace)">
+<!--   -->
+</a>
+<ul class="blockListLast">
+<li class="blockList">
+<h4>ConvolutionDouble</h4>
+<pre>protected&nbsp;ConvolutionDouble(<a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;inp,
+                 <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;out)</pre>
+<div class="block">The following constructor make this class non instantiable, but still
  let others inherit from this class.</div>
 </li>
 </ul>
@@ -310,11 +372,14 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <h4>push</h4>
 <pre>public&nbsp;void&nbsp;push(<a href="../../../mitiv/linalg/shaped/ShapedVector.html" title="class in mitiv.linalg.shaped">ShapedVector</a>&nbsp;inp)</pre>
 <div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../../mitiv/deconv/Convolution.html#push(mitiv.linalg.shaped.ShapedVector)">Convolution</a></code></strong></div>
-<div class="block">Copy data to the internal workspace.</div>
+<div class="block">Copy data to the internal workspace.
+
+ This operation should be done before calling the <a href="../../../mitiv/deconv/Convolution.html#convolve(boolean)"><code>Convolution.convolve(boolean)</code></a>
+ method.</div>
 <dl>
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../../mitiv/deconv/Convolution.html#push(mitiv.linalg.shaped.ShapedVector)">push</a></code>&nbsp;in class&nbsp;<code><a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></code></dd>
-<dt><span class="strong">Parameters:</span></dt><dd><code>inp</code> - - The real array to copy to the internal workspace.</dd></dl>
+<dt><span class="strong">Parameters:</span></dt><dd><code>inp</code> - - The source vector to copy to the internal workspace.</dd></dl>
 </li>
 </ul>
 <a name="push(double[])">
@@ -335,11 +400,16 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <h4>pull</h4>
 <pre>public&nbsp;void&nbsp;pull(<a href="../../../mitiv/linalg/shaped/ShapedVector.html" title="class in mitiv.linalg.shaped">ShapedVector</a>&nbsp;out)</pre>
 <div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../../mitiv/deconv/Convolution.html#pull(mitiv.linalg.shaped.ShapedVector)">Convolution</a></code></strong></div>
-<div class="block">Extract real part of the internal workspace.</div>
+<div class="block">Retrieve the result of the convolution.
+
+ After calling the <a href="../../../mitiv/deconv/Convolution.html#convolve(boolean)"><code>Convolution.convolve(boolean)</code></a> method, this operation extracts the
+ real part of the internal workspace for the output region and scales
+ the values.</div>
 <dl>
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../../mitiv/deconv/Convolution.html#pull(mitiv.linalg.shaped.ShapedVector)">pull</a></code>&nbsp;in class&nbsp;<code><a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></code></dd>
-<dt><span class="strong">Parameters:</span></dt><dd><code>out</code> - - The real array to store the real part of the internal workspace.</dd></dl>
+<dt><span class="strong">Parameters:</span></dt><dd><code>out</code> - - The destination vector to store the real part of the internal
+            workspace.</dd></dl>
 </li>
 </ul>
 <a name="pull(double[])">
@@ -348,7 +418,7 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <ul class="blockList">
 <li class="blockList">
 <h4>pull</h4>
-<pre>public&nbsp;void&nbsp;pull(double[]&nbsp;x)</pre>
+<pre>public abstract&nbsp;void&nbsp;pull(double[]&nbsp;x)</pre>
 <div class="block">Copy real part of workspace into output array.</div>
 </li>
 </ul>
@@ -408,9 +478,13 @@ extends <a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.d
 <ul class="blockList">
 <li class="blockList">
 <h4>convolve</h4>
-<pre>public&nbsp;double[]&nbsp;convolve(boolean&nbsp;conj)</pre>
+<pre>public&nbsp;void&nbsp;convolve(boolean&nbsp;conj)</pre>
 <div class="block">Compute F^*.diag(mtf).F.x
  where x is internal workspace.</div>
+<dl>
+<dt><strong>Specified by:</strong></dt>
+<dd><code><a href="../../../mitiv/deconv/Convolution.html#convolve(boolean)">convolve</a></code>&nbsp;in class&nbsp;<code><a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></code></dd>
+<dt><span class="strong">Parameters:</span></dt><dd><code>conj</code> - - Apply the adjoint of the operator if true.</dd></dl>
 </li>
 </ul>
 <a name="setPSF(mitiv.linalg.shaped.ShapedVector)">
