--- a/mitiv/deconv/impl/ConvolutionFloat1D.html
+++ b/mitiv/deconv/impl/ConvolutionFloat1D.html
@@ -85,6 +85,12 @@
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
+<li><a href="../../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">mitiv.linalg.LinearOperator</a></li>
+<li>
+<ul class="inheritance">
+<li><a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped">mitiv.linalg.shaped.ShapedLinearOperator</a></li>
+<li>
+<ul class="inheritance">
 <li><a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">mitiv.deconv.Convolution</a></li>
 <li>
 <ul class="inheritance">
@@ -99,9 +105,17 @@
 </ul>
 </li>
 </ul>
+</li>
+</ul>
+</li>
+</ul>
 <div class="description">
 <ul class="blockList">
 <li class="blockList">
+<dl>
+<dt>All Implemented Interfaces:</dt>
+<dd><a href="../../../mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a></dd>
+</dl>
 <hr>
 <br>
 <pre>public class <strong>ConvolutionFloat1D</strong>
@@ -126,7 +140,21 @@ extends <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class 
 <!--   -->
 </a>
 <h3>Fields inherited from class&nbsp;mitiv.deconv.<a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></h3>
-<code><a href="../../../mitiv/deconv/Convolution.html#number">number</a>, <a href="../../../mitiv/deconv/Convolution.html#shape">shape</a>, <a href="../../../mitiv/deconv/Convolution.html#space">space</a>, <a href="../../../mitiv/deconv/Convolution.html#timer">timer</a>, <a href="../../../mitiv/deconv/Convolution.html#timerForFFT">timerForFFT</a></code></li>
+<code><a href="../../../mitiv/deconv/Convolution.html#timer">timer</a>, <a href="../../../mitiv/deconv/Convolution.html#timerForFFT">timerForFFT</a></code></li>
+</ul>
+<ul class="blockList">
+<li class="blockList"><a name="fields_inherited_from_class_mitiv.linalg.LinearOperator">
+<!--   -->
+</a>
+<h3>Fields inherited from class&nbsp;mitiv.linalg.<a href="../../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></h3>
+<code><a href="../../../mitiv/linalg/LinearOperator.html#ADJOINT">ADJOINT</a>, <a href="../../../mitiv/linalg/LinearOperator.html#ADJOINT_INVERSE">ADJOINT_INVERSE</a>, <a href="../../../mitiv/linalg/LinearOperator.html#DIRECT">DIRECT</a>, <a href="../../../mitiv/linalg/LinearOperator.html#inputSpace">inputSpace</a>, <a href="../../../mitiv/linalg/LinearOperator.html#INVERSE">INVERSE</a>, <a href="../../../mitiv/linalg/LinearOperator.html#INVERSE_ADJOINT">INVERSE_ADJOINT</a>, <a href="../../../mitiv/linalg/LinearOperator.html#outputSpace">outputSpace</a></code></li>
+</ul>
+<ul class="blockList">
+<li class="blockList"><a name="fields_inherited_from_class_mitiv.base.Traits">
+<!--   -->
+</a>
+<h3>Fields inherited from interface&nbsp;mitiv.base.<a href="../../../mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a></h3>
+<code><a href="../../../mitiv/base/Traits.html#BIG_ENDIAN">BIG_ENDIAN</a>, <a href="../../../mitiv/base/Traits.html#BOOLEAN">BOOLEAN</a>, <a href="../../../mitiv/base/Traits.html#BYTE">BYTE</a>, <a href="../../../mitiv/base/Traits.html#CHAR">CHAR</a>, <a href="../../../mitiv/base/Traits.html#classes">classes</a>, <a href="../../../mitiv/base/Traits.html#DBL_EPSILON">DBL_EPSILON</a>, <a href="../../../mitiv/base/Traits.html#DOUBLE">DOUBLE</a>, <a href="../../../mitiv/base/Traits.html#FIRST_NUMERIC">FIRST_NUMERIC</a>, <a href="../../../mitiv/base/Traits.html#FLOAT">FLOAT</a>, <a href="../../../mitiv/base/Traits.html#FLT_EPSILON">FLT_EPSILON</a>, <a href="../../../mitiv/base/Traits.html#INT">INT</a>, <a href="../../../mitiv/base/Traits.html#isNumeric">isNumeric</a>, <a href="../../../mitiv/base/Traits.html#LAST_NUMERIC">LAST_NUMERIC</a>, <a href="../../../mitiv/base/Traits.html#LITTLE_ENDIAN">LITTLE_ENDIAN</a>, <a href="../../../mitiv/base/Traits.html#LONG">LONG</a>, <a href="../../../mitiv/base/Traits.html#names">names</a>, <a href="../../../mitiv/base/Traits.html#NATIVE_BYTE_ORDER">NATIVE_BYTE_ORDER</a>, <a href="../../../mitiv/base/Traits.html#OBJECT">OBJECT</a>, <a href="../../../mitiv/base/Traits.html#SHORT">SHORT</a>, <a href="../../../mitiv/base/Traits.html#sizes">sizes</a>, <a href="../../../mitiv/base/Traits.html#suffixes">suffixes</a>, <a href="../../../mitiv/base/Traits.html#UNKNOWN_BYTE_ORDER">UNKNOWN_BYTE_ORDER</a>, <a href="../../../mitiv/base/Traits.html#VOID">VOID</a></code></li>
 </ul>
 </li>
 </ul>
@@ -143,7 +171,14 @@ extends <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class 
 </tr>
 <tr class="altColor">
 <td class="colOne"><code><strong><a href="../../../mitiv/deconv/impl/ConvolutionFloat1D.html#ConvolutionFloat1D(mitiv.linalg.shaped.ShapedVectorSpace)">ConvolutionFloat1D</a></strong>(<a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;space)</code>
-<div class="block">Create a new FFT-based convolution operator given the PSF.</div>
+<div class="block">Create a new convolution operator for 1D arrays of float's.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colOne"><code><strong><a href="../../../mitiv/deconv/impl/ConvolutionFloat1D.html#ConvolutionFloat1D(mitiv.linalg.shaped.ShapedVectorSpace, mitiv.linalg.shaped.ShapedVectorSpace, int[])">ConvolutionFloat1D</a></strong>(<a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;inp,
+                  <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;out,
+                  int[]&nbsp;off)</code>
+<div class="block">Create a new convolution operator for 1D arrays of float's.</div>
 </td>
 </tr>
 </table>
@@ -173,20 +208,40 @@ extends <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class 
 <div class="block">Apply in-place forward complex FFT.</div>
 </td>
 </tr>
+<tr class="altColor">
+<td class="colFirst"><code>void</code></td>
+<td class="colLast"><code><strong><a href="../../../mitiv/deconv/impl/ConvolutionFloat1D.html#pull(float[])">pull</a></strong>(float[]&nbsp;x)</code>
+<div class="block">Copy real part of workspace into output array.</div>
+</td>
+</tr>
 </table>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_mitiv.deconv.impl.ConvolutionFloat">
 <!--   -->
 </a>
 <h3>Methods inherited from class&nbsp;mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class in mitiv.deconv.impl">ConvolutionFloat</a></h3>
-<code><a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#backwardFFT()">backwardFFT</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#convolve(boolean)">convolve</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#forwardFFT()">forwardFFT</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#getWorkspace()">getWorkspace</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#pull(float[])">pull</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#pull(mitiv.linalg.shaped.ShapedVector)">pull</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#push(float[])">push</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#push(mitiv.linalg.shaped.ShapedVector)">push</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#setPSF(mitiv.array.ShapedArray, int[])">setPSF</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#setPSF(mitiv.linalg.shaped.ShapedVector)">setPSF</a></code></li>
+<code><a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#backwardFFT()">backwardFFT</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#convolve(boolean)">convolve</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#forwardFFT()">forwardFFT</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#getWorkspace()">getWorkspace</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#pull(mitiv.linalg.shaped.ShapedVector)">pull</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#push(float[])">push</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#push(mitiv.linalg.shaped.ShapedVector)">push</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#setPSF(mitiv.array.ShapedArray, int[])">setPSF</a>, <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#setPSF(mitiv.linalg.shaped.ShapedVector)">setPSF</a></code></li>
 </ul>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_mitiv.deconv.Convolution">
 <!--   -->
 </a>
 <h3>Methods inherited from class&nbsp;mitiv.deconv.<a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></h3>
-<code><a href="../../../mitiv/deconv/Convolution.html#adjustPSF(mitiv.array.ShapedArray, int[])">adjustPSF</a>, <a href="../../../mitiv/deconv/Convolution.html#build(mitiv.linalg.shaped.ShapedVectorSpace)">build</a>, <a href="../../../mitiv/deconv/Convolution.html#center(mitiv.base.Shape)">center</a>, <a href="../../../mitiv/deconv/Convolution.html#dimension(int)">dimension</a>, <a href="../../../mitiv/deconv/Convolution.html#getElapsedTime()">getElapsedTime</a>, <a href="../../../mitiv/deconv/Convolution.html#getElapsedTimeInFFT()">getElapsedTimeInFFT</a>, <a href="../../../mitiv/deconv/Convolution.html#getNumber()">getNumber</a>, <a href="../../../mitiv/deconv/Convolution.html#getRank()">getRank</a>, <a href="../../../mitiv/deconv/Convolution.html#getSpace()">getSpace</a>, <a href="../../../mitiv/deconv/Convolution.html#getType()">getType</a>, <a href="../../../mitiv/deconv/Convolution.html#resetTimers()">resetTimers</a>, <a href="../../../mitiv/deconv/Convolution.html#setPSF(mitiv.array.ShapedArray)">setPSF</a></code></li>
+<code><a href="../../../mitiv/deconv/Convolution.html#adjustPSF(mitiv.array.ShapedArray, int[])">adjustPSF</a>, <a href="../../../mitiv/deconv/Convolution.html#build(mitiv.linalg.shaped.ShapedVectorSpace)">build</a>, <a href="../../../mitiv/deconv/Convolution.html#build(mitiv.linalg.shaped.ShapedVectorSpace, mitiv.linalg.shaped.ShapedVectorSpace)">build</a>, <a href="../../../mitiv/deconv/Convolution.html#build(mitiv.linalg.shaped.ShapedVectorSpace, mitiv.linalg.shaped.ShapedVectorSpace, int[])">build</a>, <a href="../../../mitiv/deconv/Convolution.html#center(mitiv.base.Shape)">center</a>, <a href="../../../mitiv/deconv/Convolution.html#getElapsedTime()">getElapsedTime</a>, <a href="../../../mitiv/deconv/Convolution.html#getElapsedTimeInFFT()">getElapsedTimeInFFT</a>, <a href="../../../mitiv/deconv/Convolution.html#getNumber()">getNumber</a>, <a href="../../../mitiv/deconv/Convolution.html#getRank()">getRank</a>, <a href="../../../mitiv/deconv/Convolution.html#getType()">getType</a>, <a href="../../../mitiv/deconv/Convolution.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply</a>, <a href="../../../mitiv/deconv/Convolution.html#resetTimers()">resetTimers</a>, <a href="../../../mitiv/deconv/Convolution.html#setPSF(mitiv.array.ShapedArray)">setPSF</a></code></li>
+</ul>
+<ul class="blockList">
+<li class="blockList"><a name="methods_inherited_from_class_mitiv.linalg.shaped.ShapedLinearOperator">
+<!--   -->
+</a>
+<h3>Methods inherited from class&nbsp;mitiv.linalg.shaped.<a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped">ShapedLinearOperator</a></h3>
+<code><a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html#getInputSpace()">getInputSpace</a>, <a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html#getOutputSpace()">getOutputSpace</a></code></li>
+</ul>
+<ul class="blockList">
+<li class="blockList"><a name="methods_inherited_from_class_mitiv.linalg.LinearOperator">
+<!--   -->
+</a>
+<h3>Methods inherited from class&nbsp;mitiv.linalg.<a href="../../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></h3>
+<code><a href="../../../mitiv/linalg/LinearOperator.html#apply(mitiv.linalg.Vector, mitiv.linalg.Vector)">apply</a>, <a href="../../../mitiv/linalg/LinearOperator.html#apply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">apply</a>, <a href="../../../mitiv/linalg/LinearOperator.html#checkAdjoint(mitiv.linalg.Vector, mitiv.linalg.Vector)">checkAdjoint</a>, <a href="../../../mitiv/linalg/LinearOperator.html#checkLinearProblem(mitiv.linalg.LinearOperator, mitiv.linalg.Vector, mitiv.linalg.Vector, boolean)">checkLinearProblem</a>, <a href="../../../mitiv/linalg/LinearOperator.html#isEndomorphism()">isEndomorphism</a></code></li>
 </ul>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_java.lang.Object">
@@ -212,12 +267,26 @@ extends <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class 
 <a name="ConvolutionFloat1D(mitiv.linalg.shaped.ShapedVectorSpace)">
 <!--   -->
 </a>
-<ul class="blockListLast">
+<ul class="blockList">
 <li class="blockList">
 <h4>ConvolutionFloat1D</h4>
 <pre>public&nbsp;ConvolutionFloat1D(<a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;space)</pre>
-<div class="block">Create a new FFT-based convolution operator given the PSF.</div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>FFT</code> - - The Fast Fourier Transform operator.</dd><dd><code>psf</code> - - The point spread function.</dd></dl>
+<div class="block">Create a new convolution operator for 1D arrays of float's.</div>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>space</code> - - The input and output space.</dd></dl>
+</li>
+</ul>
+<a name="ConvolutionFloat1D(mitiv.linalg.shaped.ShapedVectorSpace, mitiv.linalg.shaped.ShapedVectorSpace, int[])">
+<!--   -->
+</a>
+<ul class="blockListLast">
+<li class="blockList">
+<h4>ConvolutionFloat1D</h4>
+<pre>public&nbsp;ConvolutionFloat1D(<a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;inp,
+                  <a href="../../../mitiv/linalg/shaped/ShapedVectorSpace.html" title="class in mitiv.linalg.shaped">ShapedVectorSpace</a>&nbsp;out,
+                  int[]&nbsp;off)</pre>
+<div class="block">Create a new convolution operator for 1D arrays of float's.</div>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>inp</code> - - The input space.</dd><dd><code>out</code> - - The output space.</dd><dd><code>off</code> - - The position of the output relative to the result
+              of the convolution.</dd></dl>
 </li>
 </ul>
 </li>
@@ -245,7 +314,7 @@ extends <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class 
 <a name="backwardFFT(float[])">
 <!--   -->
 </a>
-<ul class="blockListLast">
+<ul class="blockList">
 <li class="blockList">
 <h4>backwardFFT</h4>
 <pre>public final&nbsp;void&nbsp;backwardFFT(float[]&nbsp;z)</pre>
@@ -253,6 +322,21 @@ extends <a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class 
 <dl>
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#backwardFFT(float[])">backwardFFT</a></code>&nbsp;in class&nbsp;<code><a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class in mitiv.deconv.impl">ConvolutionFloat</a></code></dd>
+</dl>
+</li>
+</ul>
+<a name="pull(float[])">
+<!--   -->
+</a>
+<ul class="blockListLast">
+<li class="blockList">
+<h4>pull</h4>
+<pre>public&nbsp;void&nbsp;pull(float[]&nbsp;x)</pre>
+<div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#pull(float[])">ConvolutionFloat</a></code></strong></div>
+<div class="block">Copy real part of workspace into output array.</div>
+<dl>
+<dt><strong>Specified by:</strong></dt>
+<dd><code><a href="../../../mitiv/deconv/impl/ConvolutionFloat.html#pull(float[])">pull</a></code>&nbsp;in class&nbsp;<code><a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class in mitiv.deconv.impl">ConvolutionFloat</a></code></dd>
 </dl>
 </li>
 </ul>
