--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -398,7 +398,7 @@
 <li><a href="mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionFloat3D</a></li>
 <li><a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg" target="classFrame">WeightGenerator</a></li>
 <li><a href="mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv" target="classFrame">WeightingOperator</a></li>
-<li><a href="mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy" target="classFrame">Zernike1D</a></li>
+<li><a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy" target="classFrame">Zernike</a></li>
 </ul>
 </div>
 </body>
