--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -398,7 +398,7 @@
 <li><a href="mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat3D</a></li>
 <li><a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg">WeightGenerator</a></li>
 <li><a href="mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv">WeightingOperator</a></li>
-<li><a href="mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy">Zernike1D</a></li>
+<li><a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy">Zernike</a></li>
 </ul>
 </div>
 </body>
