--- a/mitiv/microscopy/package-frame.html
+++ b/mitiv/microscopy/package-frame.html
@@ -13,7 +13,7 @@
 <ul title="Classes">
 <li><a href="MicroscopyModelPSF1D.html" title="class in mitiv.microscopy" target="classFrame">MicroscopyModelPSF1D</a></li>
 <li><a href="PSF_Estimation.html" title="class in mitiv.microscopy" target="classFrame">PSF_Estimation</a></li>
-<li><a href="Zernike1D.html" title="class in mitiv.microscopy" target="classFrame">Zernike1D</a></li>
+<li><a href="Zernike.html" title="class in mitiv.microscopy" target="classFrame">Zernike</a></li>
 </ul>
 </div>
 </body>
