--- a/overview-tree.html
+++ b/overview-tree.html
@@ -727,7 +727,7 @@
 </ul>
 </li>
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg"><span class="strong">WeightGenerator</span></a></li>
-<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">Zernike1D</span></a></li>
+<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">Zernike</span></a></li>
 </ul>
 </li>
 </ul>
