--- a/mitiv/microscopy/MicroscopyModelPSF1D.html
+++ b/mitiv/microscopy/MicroscopyModelPSF1D.html
@@ -291,7 +291,7 @@ extends java.lang.Object</pre>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#sum_depth_over_defocus">sum_depth_over_defocus</a></strong></code>&nbsp;</td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><code>protected double</code></td>
+<td class="colFirst"><code>protected boolean</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#use_depth_scaling">use_depth_scaling</a></strong></code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
@@ -317,23 +317,7 @@ extends java.lang.Object</pre>
 <th class="colOne" scope="col">Constructor and Description</th>
 </tr>
 <tr class="altColor">
-<td class="colOne"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#MicroscopyModelPSF1D()">MicroscopyModelPSF1D</a></strong>()</code>
-<div class="block">Initialize the WFFM PSF model containing parameters
-  NA 1.4, numerical aperture
-  lambda 542e-9,  emission wavelength
-  ni 1.518, ni refractive index of the immersion medium
-  ns 0, refractive index of the specimen
-  zdepth 0, zdepth
-  dxy 64.5e-9, lateral pixel size
-  dz 160e-9 axial sampling step size
-  Nx 256, number of samples along lateral X-dimension
-  Ny 256, number of samples along lateral Y-dimension
-  Nz 64, number of samples along axial Z-dimension
-  use_depth_scaling 0</div>
-</td>
-</tr>
-<tr class="rowColor">
-<td class="colOne"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#MicroscopyModelPSF1D(double, double, double, double, double, double, double, int, int, int, int)">MicroscopyModelPSF1D</a></strong>(double&nbsp;NA,
+<td class="colOne"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#MicroscopyModelPSF1D(double, double, double, double, double, double, double, int, int, int, boolean)">MicroscopyModelPSF1D</a></strong>(double&nbsp;NA,
                     double&nbsp;lambda,
                     double&nbsp;ni,
                     double&nbsp;ns,
@@ -343,7 +327,7 @@ extends java.lang.Object</pre>
                     int&nbsp;Nx,
                     int&nbsp;Ny,
                     int&nbsp;Nz,
-                    int&nbsp;use_depth_scaling)</code>
+                    boolean&nbsp;use_depth_scaling)</code>
 <div class="block">Initialize the WFFM PSF model containing parameters</div>
 </td>
 </tr>
@@ -385,104 +369,99 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#computePSF_3Dfft()">computePSF_3Dfft</a></strong>()</code>&nbsp;</td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#computePSF()">computePSF</a></strong>()</code>
 <div class="block">Compute the point spread function</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#computePSF(double[], double[], double, double, double)">computePSF</a></strong>(double[]&nbsp;alpha,
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#computePSF(double[], double[], double, double)">computePSF</a></strong>(double[]&nbsp;alpha,
           double[]&nbsp;beta,
           double&nbsp;deltaX,
-          double&nbsp;deltaY,
-          double&nbsp;zdepth)</code>
+          double&nbsp;deltaY)</code>
 <div class="block">Compute the point spread function</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#get_a()">get_a</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getAlpha()">getAlpha</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getBeta()">getBeta</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getDefocus()">getDefocus</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getDefocusMultiplyByLambda()">getDefocusMultiplyByLambda</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getGamma()">getGamma</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getInfo()">getInfo</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getLambda()">getLambda</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getMaskPupil()">getMaskPupil</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getNi()">getNi</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getPhi()">getPhi</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getPSF()">getPSF</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getPSF(int)">getPSF</a></strong>(int&nbsp;k)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getPsi()">getPsi</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getRho()">getRho</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getZernike()">getZernike</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#getZernike(int)">getZernike</a></strong>(int&nbsp;k)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#setDefocus(double[])">setDefocus</a></strong>(double[]&nbsp;defocus)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#setPhi(double[])">setPhi</a></strong>(double[]&nbsp;alpha)</code>
 <div class="block">Compute φ the part of the phase of the pupil function
  on a Zernike polynomial basis</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html#setRho(double[])">setRho</a></strong>(double[]&nbsp;beta)</code>
 <div class="block">Compute the modulus ρ on a Zernike polynomial basis</div>
@@ -644,7 +623,7 @@ extends java.lang.Object</pre>
 <ul class="blockList">
 <li class="blockList">
 <h4>use_depth_scaling</h4>
-<pre>protected&nbsp;double use_depth_scaling</pre>
+<pre>protected&nbsp;boolean use_depth_scaling</pre>
 </li>
 </ul>
 <a name="deltaX">
@@ -889,28 +868,7 @@ extends java.lang.Object</pre>
 <!--   -->
 </a>
 <h3>Constructor Detail</h3>
-<a name="MicroscopyModelPSF1D()">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>MicroscopyModelPSF1D</h4>
-<pre>public&nbsp;MicroscopyModelPSF1D()</pre>
-<div class="block">Initialize the WFFM PSF model containing parameters
-  NA 1.4, numerical aperture
-  lambda 542e-9,  emission wavelength
-  ni 1.518, ni refractive index of the immersion medium
-  ns 0, refractive index of the specimen
-  zdepth 0, zdepth
-  dxy 64.5e-9, lateral pixel size
-  dz 160e-9 axial sampling step size
-  Nx 256, number of samples along lateral X-dimension
-  Ny 256, number of samples along lateral Y-dimension
-  Nz 64, number of samples along axial Z-dimension
-  use_depth_scaling 0</div>
-</li>
-</ul>
-<a name="MicroscopyModelPSF1D(double, double, double, double, double, double, double, int, int, int, int)">
+<a name="MicroscopyModelPSF1D(double, double, double, double, double, double, double, int, int, int, boolean)">
 <!--   -->
 </a>
 <ul class="blockListLast">
@@ -926,7 +884,7 @@ extends java.lang.Object</pre>
                     int&nbsp;Nx,
                     int&nbsp;Ny,
                     int&nbsp;Nz,
-                    int&nbsp;use_depth_scaling)</pre>
+                    boolean&nbsp;use_depth_scaling)</pre>
 <div class="block">Initialize the WFFM PSF model containing parameters</div>
 <dl><dt><span class="strong">Parameters:</span></dt><dd><code>NA</code> - numerical aperture</dd><dd><code>lambda</code> - emission wavelength</dd><dd><code>ni</code> - refractive index of the immersion medium</dd><dd><code>ns</code> - refractive index of the specimen</dd><dd><code>zdepth</code> - </dd><dd><code>dxy</code> - lateral pixel size</dd><dd><code>dz</code> - axial sampling step size</dd><dd><code>Nx</code> - number of samples along lateral X-dimension</dd><dd><code>Ny</code> - number of samples along lateral Y-dimension</dd><dd><code>Nz</code> - number of samples along axial Z-dimension</dd><dd><code>use_depth_scaling</code> - use_depth_scaling = 1, PSF are centered on the plan with maximum strehl</dd></dl>
 </li>
@@ -1001,6 +959,22 @@ extends java.lang.Object</pre>
  [c_y, c_x] : center of both defocus and depth function</dd></dl>
 </li>
 </ul>
+<a name="computePSF(double[], double[], double, double)">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>computePSF</h4>
+<pre>public&nbsp;void&nbsp;computePSF(double[]&nbsp;alpha,
+              double[]&nbsp;beta,
+              double&nbsp;deltaX,
+              double&nbsp;deltaY)</pre>
+<div class="block">Compute the point spread function
+ <p>
+ h_k(z) = |a_j(z)|² = |Σ_{j,k}A_k(z)|²</div>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>alpha</code> - </dd><dd><code>beta</code> - </dd><dd><code>deltaX</code> - </dd><dd><code>deltaY</code> - </dd><dd><code>zdepth</code> - </dd></dl>
+</li>
+</ul>
 <a name="computePSF()">
 <!--   -->
 </a>
@@ -1011,32 +985,6 @@ extends java.lang.Object</pre>
 <div class="block">Compute the point spread function
  <p>
  h_k(z) = |a_j(z)|² = |Σ_{j,k}A_k(z)|²</div>
-</li>
-</ul>
-<a name="computePSF_3Dfft()">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>computePSF_3Dfft</h4>
-<pre>public&nbsp;void&nbsp;computePSF_3Dfft()</pre>
-</li>
-</ul>
-<a name="computePSF(double[], double[], double, double, double)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>computePSF</h4>
-<pre>public&nbsp;void&nbsp;computePSF(double[]&nbsp;alpha,
-              double[]&nbsp;beta,
-              double&nbsp;deltaX,
-              double&nbsp;deltaY,
-              double&nbsp;zdepth)</pre>
-<div class="block">Compute the point spread function
- <p>
- h_k(z) = |a_j(z)|² = |Σ_{j,k}A_k(z)|²</div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>alpha</code> - </dd><dd><code>beta</code> - </dd><dd><code>deltaX</code> - </dd><dd><code>deltaY</code> - </dd><dd><code>zdepth</code> - </dd></dl>
 </li>
 </ul>
 <a name="apply_J_rho(double[])">
