--- a/mitiv/microscopy/PSF_Estimation.html
+++ b/mitiv/microscopy/PSF_Estimation.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
@@ -221,7 +221,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><code><a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a></code></td>
+<td class="colFirst"><code><a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getPsf()">getPsf</a></strong>()</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
@@ -272,45 +272,49 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPsf(mitiv.array.DoubleArray)">setPsf</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;psf)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setObj(mitiv.array.ShapedArray)">setObj</a></strong>(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;obj)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><code>void</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPsf(mitiv.array.DoubleArray)">setPsf</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;psf)</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPupil(mitiv.microscopy.MicroscopyModelPSF1D)">setPupil</a></strong>(<a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a>&nbsp;pupil)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setRegularizationThreshold(double)">setRegularizationThreshold</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setRegularizationWeight(double)">setRegularizationWeight</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setRelativeTolerance(double)">setRelativeTolerance</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setResult(mitiv.array.DoubleArray)">setResult</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;result)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setUpperBound(double)">setUpperBound</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setViewer(mitiv.invpb.ReconstructionViewer)">setViewer</a></strong>(<a href="../../mitiv/invpb/ReconstructionViewer.html" title="interface in mitiv.invpb">ReconstructionViewer</a>&nbsp;rv)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setWeight(mitiv.array.DoubleArray)">setWeight</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;W)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#start()">start</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#stop()">stop</a></strong>()</code>&nbsp;</td>
 </tr>
@@ -618,7 +622,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <ul class="blockList">
 <li class="blockList">
 <h4>getPsf</h4>
-<pre>public&nbsp;<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;getPsf()</pre>
+<pre>public&nbsp;<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;getPsf()</pre>
 </li>
 </ul>
 <a name="setPsf(mitiv.array.DoubleArray)">
@@ -732,7 +736,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <a name="getGradientNormInf()">
 <!--   -->
 </a>
-<ul class="blockListLast">
+<ul class="blockList">
 <li class="blockList">
 <h4>getGradientNormInf</h4>
 <pre>public&nbsp;double&nbsp;getGradientNormInf()</pre>
@@ -742,6 +746,15 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../mitiv/invpb/ReconstructionJob.html#getGradientNormInf()">getGradientNormInf</a></code>&nbsp;in interface&nbsp;<code><a href="../../mitiv/invpb/ReconstructionJob.html" title="interface in mitiv.invpb">ReconstructionJob</a></code></dd>
 </dl>
+</li>
+</ul>
+<a name="setObj(mitiv.array.ShapedArray)">
+<!--   -->
+</a>
+<ul class="blockListLast">
+<li class="blockList">
+<h4>setObj</h4>
+<pre>public&nbsp;void&nbsp;setObj(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;obj)</pre>
 </li>
 </ul>
 </li>
@@ -770,7 +783,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
